# logs_server

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 97b1cc712fb4_init.py
src/: main.py  routes.py
src/config/: lifespan.py  settings.py
src/database/: engine.py  models.py  session.py
src/enums/: log.py
