[project]
name = "logs-server"
version = "0.1.0"
description = "Un servidor para almacenar Logs de diferentes aplicaciones e instancias de estas mismas."
authors = [
    {name = "Leandro Franco",email = "leandro00fr@gmail.com"}
]
readme = "README.md"
packages = [{include = "src"}]

requires-python = ">=3.12"

[tool.poetry.dependencies]
python = "3.12.3"
fastapi = "0.116.1"
uvicorn = "0.35.0"
sqlalchemy = "2.0.42"
asyncpg = "0.30.0"
pydantic = "2.11.7"
pydantic-settings = "2.10.1"
alembic = "1.16.4"
redis = "5.2.1"
httpx = 

[tool.poetry.group.dev.dependencies]
pytest = "8.4.1"
pytest-asyncio = "0.23.0"
ruff = "0.9.0"
pytest-cov = "6.0.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [ "." ]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
